z-index fixs

--- a/pwatemplate/style.css
+++ b/pwatemplate/style.css
@@ -69,11 +69,11 @@ body {
 }
 
 .mainAppNotVisible{
-    z-index: -1;
+    z-index: -99;
 }
 
 .mainAppVisible{
-    z-index: 0;
+    z-index: 1;
 }
 
 .white {
